--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title>Responsive Landing Page with NavBar</title>
+    <title>Finance Tracker</title>
 </head>
 
 <body>
@@ -17,9 +17,10 @@
         <section class="menu">
             <ul class="menu-list">
                 <li>Home</li>
-                <li class="active">Products</li>
+                <li class="active">Features</li>
                 <li>About Us</li>
                 <li>Contact</li>
+                <li>Login</li>
             </ul>
 
             <button>
