--- a/login.html
+++ b/login.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Responsive Login and Signup Form </title>
+    <title> Finance Tracker </title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="login.css">
@@ -18,6 +17,7 @@
 
 <body>
     <section class="container forms">
+        <!-- Login Form -->
         <div class="form login">
             <div class="form-content">
                 <header>Login</header>
@@ -28,7 +28,7 @@
 
                     <div class="field input-field">
                         <input type="password" placeholder="Password" class="password">
-                        <i class='bx bx-hide eye-icon'></i>
+                        <i class="bx bx-hide eye-icon"></i>
                     </div>
 
                     <div class="form-link">
@@ -69,20 +69,16 @@
                 <header>Signup</header>
                 <form action="#">
                     <div class="field input-field">
-                        <input type="email" placeholder="Email" class="input">
+                        <input id="email-signup" type="email" placeholder="Email" class="input">
                     </div>
 
                     <div class="field input-field">
-                        <input type="password" placeholder="Create password" class="password">
-                    </div>
-
-                    <div class="field input-field">
-                        <input type="password" placeholder="Confirm password" class="password">
-                        <i class='bx bx-hide eye-icon'></i>
+                        <input id="password-signup" type="password" placeholder="Confirm password" class="password">
+                        <i class="bx bx-hide eye-icon"></i>
                     </div>
 
                     <div class="field button-field">
-                        <button>Signup</button>
+                        <button id="submitData" type="submit">Signup</button>
                     </div>
                 </form>
 
@@ -109,6 +105,50 @@
 
     <!-- JavaScript -->
     <script src="login.js"></script>
+    <!-- Firbase SDK -->
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+        // import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
+        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyABGF1v0w43s84ptrzQJijen35DlpaRL5E",
+            authDomain: "finance-tracker-login.firebaseapp.com",
+            projectId: "finance-tracker-login",
+            storageBucket: "finance-tracker-login.appspot.com",
+            messagingSenderId: "568099662115",
+            appId: "1:568099662115:web:f78ed70dd961eaf985c496",
+            measurementId: "G-F9PBE5F6MK"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth();
+        // Authentication credentials
+
+        submitData.addEventListener("click", (e) => {
+            var email = document.getElementById("email-signup").value;
+            var password = document.getElementById("password-signup").value;
+
+
+            createUserWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    // Signed in 
+                    const user = userCredential.user;
+                    // ...
+                    alert("User signed in");
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    // ..
+                    alert(errorCode + " also " + errorMessage);
+                });
+        });
+    </script>
 </body>
 
 </html>
