--- a/login.html
+++ b/login.html
@@ -105,6 +105,7 @@
 
     <!-- JavaScript -->
     <script src="login.js"></script>
+    <script src="config.js"></script>
     <!-- Firbase SDK -->
     <script type="module">
         // Import the functions you need from the SDKs you need
@@ -115,13 +116,7 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-            apiKey: "AIzaSyABGF1v0w43s84ptrzQJijen35DlpaRL5E",
-            authDomain: "finance-tracker-login.firebaseapp.com",
-            projectId: "finance-tracker-login",
-            storageBucket: "finance-tracker-login.appspot.com",
-            messagingSenderId: "568099662115",
-            appId: "1:568099662115:web:f78ed70dd961eaf985c496",
-            measurementId: "G-F9PBE5F6MK"
+
         };
 
         // Initialize Firebase
