--- a/src/Auth/login.html
+++ b/src/Auth/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="login.css">
 
     <!-- Boxicons CSS -->
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
 
 </head>
 
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="field button-field">
-                        <button>Login</button>
+                        <button class="e-btn">Login</button>
                     </div>
                 </form>
 
@@ -51,11 +51,11 @@
             <div class="media-options">
 
                 <a href="#" class="field google">
-                    <img src="/images/google.svg" alt="" class="google-img">
+                    <img src="../assets/google.svg" alt="" class="google-img">
                     <span>Login with Google</span>
                 </a>
                 <a href="#" class="field github">
-                    <img src="/images/github.svg" alt="" class="github-img">
+                    <img src="../assets/github.svg" alt="" class="github-img">
                     <span>Login with Github</span>
                 </a>
             </div>
@@ -90,12 +90,12 @@
             <div class="line"></div>
 
             <div class="media-options">
-                <a href="#" class="field google">
-                    <img src="/images/google.svg" alt="" class="google-img">
-                    <span>Sign up with Google</span>
+                <a href="" class="field google">
+                    <img src="../assets/google.svg" alt="" class="google-img">
+                    <button id="GoogleSignup">Sign up with Google</button>
                 </a>
                 <a href="#" class="field github">
-                    <img src="/images/github.svg" alt="" class="github-img">
+                    <img src="../assets/github.svg" alt="" class="github-img">
                     <span>Sign up with Github</span>
                 </a>
             </div>
@@ -112,16 +112,23 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
         // import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
         import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+        import { signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
 
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-
+            apiKey: "AIzaSyABGF1v0w43s84ptrzQJijen35DlpaRL5E",
+            authDomain: "finance-tracker-login.firebaseapp.com",
+            projectId: "finance-tracker-login",
+            storageBucket: "finance-tracker-login.appspot.com",
+            messagingSenderId: "568099662115",
+            appId: "1:568099662115:web:f78ed70dd961eaf985c496",
+            measurementId: "G-F9PBE5F6MK"
         };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-        const auth = getAuth();
+        const auth = getAuth(app);
         // Authentication credentials
 
         submitData.addEventListener("click", (e) => {
@@ -141,6 +148,31 @@
                     const errorMessage = error.message;
                     // ..
                     alert(errorCode + " also " + errorMessage);
+                });
+        });
+
+        // Google Signup
+
+        const provider = new GoogleAuthProvider(app);
+        GoogleSignup.addEventListener("click", (e) => {
+            signInWithPopup(auth, provider)
+                .then((result) => {
+                    // This gives you a Google Access Token. You can use it to access the Google API.
+                    const credential = GoogleAuthProvider.credentialFromResult(result);
+                    const token = credential.accessToken;
+                    // The signed-in user info.
+                    const user = result.user;
+                    // IdP data available using getAdditionalUserInfo(result)
+                    // ...
+                }).catch((error) => {
+                    // Handle Errors here.
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    // The email of the user's account used.
+                    const email = error.customData.email;
+                    // The AuthCredential type that was used.
+                    const credential = GoogleAuthProvider.credentialFromError(error);
+                    // ...
                 });
         });
     </script>
