--- a/src/bill/bill.html
+++ b/src/bill/bill.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget Tracker</title>
-    <link rel="stylesheet" href="./bill.css">
-    <script type="module" src="./bill.js"></script>
+    <link rel="stylesheet" href="bill.css">
+    <script type="module" src="bill.js"></script>
 </head>
+
 <body>
     <div id="app"></div>
 </body>
+
 </html>
