removed unnecessary dependencies and fixed api leak issue

--- a/src/Auth/login.html
+++ b/src/Auth/login.html
@@ -94,10 +94,10 @@
                     <img src="../assets/google.svg" alt="" class="google-img">
                     <button id="GoogleSignup">Sign up with Google</button>
                 </div>
-                <a href="#" class="field github">
+                <div class="field github">
                     <img src="../assets/github.svg" alt="" class="github-img">
-                    <span>Sign up with Github</span>
-                </a>
+                    <button id="GithubSignup">Sign up with Github</button>
+                </div>
             </div>
 
         </div>
